// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> create button group 1`] = `
<div
  aria-label="Group label"
  className="fd-button-group"
  role="group"
>
  <button
    className=" fd-button sap-icon--survey"
    disabled={false}
  />
  <button
    className=" fd-button sap-icon--pie-chart is-selected"
    disabled={false}
  />
  <button
    className=" fd-button sap-icon--pool"
    disabled={false}
  />
</div>
`;

exports[`<Button /> create buttons 1`] = `
<button
  className=" fd-button"
  disabled={false}
>
  Regular Button
</button>
`;

exports[`<Button /> create buttons 2`] = `
<button
  className="fd-button--emphasized"
  disabled={false}
>
  Emphasized Button
</button>
`;

exports[`<Button /> create buttons 3`] = `
<button
  className=" fd-button fd-button--positive"
  disabled={false}
>
  Positive Button
</button>
`;

exports[`<Button /> create buttons 4`] = `
<button
  className=" fd-button sap-icon--cart"
  disabled={false}
>
  Icon Button
</button>
`;

exports[`<Button /> create buttons 5`] = `
<button
  className=" fd-button fd-button--compact"
  disabled={false}
>
  Compact
</button>
`;

exports[`<Button /> create buttons 6`] = `
<button
  className="fd-button--emphasized is-selected"
  disabled={false}
>
  Selected State
</button>
`;

exports[`<Button /> create buttons 7`] = `
<button
  className="fd-button--emphasized is-disabled"
  disabled={true}
>
  Disabled State
</button>
`;

exports[`<Button /> create buttons 8`] = `
<button
  className=" fd-button fd-dropdown__control"
  disabled={false}
>
  Dropdown Button
</button>
`;

exports[`<Button /> create buttons 9`] = `
<button
  className=" fd-button fd-global-nav__btn"
  disabled={false}
>
  Navbar button
</button>
`;
